<resources>
    <string name="app_name">CMS</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="schedule_meeting">Schedule Company Meeting</string>
    <string name="schedule_a_meeting">Schedule a Meeting</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
</resources>
